--- a/HTH2015/app/src/main/res/layout/activity_main.xml
+++ b/HTH2015/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:text="Data        Usage"
-        android:id="@+id/button4"
+        android:id="@+id/data_usage"
         android:background="@drawable/top_right_button"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
