--- a/HTH2015/app/src/main/res/layout/activity_main.xml
+++ b/HTH2015/app/src/main/res/layout/activity_main.xml
@@ -55,4 +55,13 @@
         android:layout_centerHorizontal="true"
         android:src="@drawable/full_width" />
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/settings_screenshot"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/settings_screenshot" />
+
+
 </RelativeLayout>
