--- a/HTH2015/app/src/main/res/layout/activity_main.xml
+++ b/HTH2015/app/src/main/res/layout/activity_main.xml
@@ -61,6 +61,7 @@
         android:id="@+id/settings_screenshot"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
+        android:visibility="gone"
         android:src="@drawable/settings_screenshot" />
 
 
