--- a/HTH2015/app/src/main/res/drawable/top_left_button.xml
+++ b/HTH2015/app/src/main/res/drawable/top_left_button.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding="10dp">
-    <solid android:color="#ff0000"/>
+    <solid android:color="#e74c3c"/>
     <corners android:radius="30dp"
         android:topLeftRadius="0dp"/>
 </shape>
