--- a/HTH2015/app/src/main/res/layout/activity_main.xml
+++ b/HTH2015/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:background="#2a2a2a">
+    android:background="#ecf0f1">
 
     <Button
         android:layout_width="100dp"
@@ -73,7 +73,7 @@
         android:id="@+id/settings_screenshot"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:visibility="gone"
+        android:visibility="invisible"
         android:src="@drawable/settings_screenshot" />
 
 </RelativeLayout>
