--- a/HTH2015/app/src/main/res/layout/activity_main.xml
+++ b/HTH2015/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:background="#ecf0f1">
+    android:background="@drawable/background_gradient">
 
     <Button
         android:layout_width="100dp"
@@ -14,7 +14,8 @@
         android:background="@drawable/top_left_button"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textColor="#ecf0f1" />
 
     <Button
         android:layout_width="100dp"
@@ -25,7 +26,8 @@
 
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textColor="#ecf0f1" />
 
     <Button
         android:layout_width="100dp"
@@ -35,7 +37,8 @@
         android:background="@drawable/bottom_right_button"
         android:layout_alignTop="@+id/button3"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:textColor="#ecf0f1" />
 
     <Button
         android:layout_width="100dp"
@@ -45,7 +48,8 @@
         android:background="@drawable/top_right_button"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:textColor="#ecf0f1" />
 
     <FrameLayout
         android:layout_width="wrap_content"
@@ -73,7 +77,7 @@
         android:id="@+id/settings_screenshot"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:visibility="invisible"
+        android:visibility="visible"
         android:src="@drawable/settings_screenshot" />
 
 </RelativeLayout>
