--- a/HTH2015/app/src/main/res/layout/activity_numbers.xml
+++ b/HTH2015/app/src/main/res/layout/activity_numbers.xml
@@ -6,38 +6,60 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center_horizontal">
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/background_gradient">
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
             android:text="Add"
-            android:id="@+id/button5"
+            android:background="@drawable/top_right_button"
+            android:layout_margin="10dp"
+            android:id="@+id/addbtn"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentEnd="true"
+            android:textColor="#ecf0f1" />
 
         <EditText
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="phone"
+            android:layout_height="45dp"
+            android:inputType="textPersonName"
             android:ems="10"
             android:ellipsize="start"
             android:gravity="center"
-            android:hint="Enter a number to add"
-            android:id="@+id/editText"
+            android:hint="Enter a name to add"
+            android:id="@+id/editname"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_toLeftOf="@+id/button5"
-            android:layout_toStartOf="@+id/button5"
-            android:layout_alignBottom="@+id/button5" />
+            android:layout_toLeftOf="@+id/addbtn"
+            android:layout_toStartOf="@+id/addbtn"
+            android:textSize="20sp" />
 
         <ListView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/listView"
-            android:layout_below="@+id/button5"
-            android:layout_centerHorizontal="true" />
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/addbtn" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="phone"
+            android:ellipsize="start"
+            android:gravity="center"
+            android:hint="Enter a number to add"
+            android:ems="10"
+            android:id="@+id/editnumber"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_toLeftOf="@+id/addbtn"
+            android:layout_toStartOf="@+id/addbtn"
+            android:layout_alignBottom="@+id/addbtn"
+            android:layout_below="@+id/editname" />
+
     </RelativeLayout>
 </LinearLayout>
