changed logo and added javascript support

--- a/HTH2015/app/src/main/res/drawable/background_gradient.xml
+++ b/HTH2015/app/src/main/res/drawable/background_gradient.xml
@@ -3,9 +3,9 @@
 
     <gradient
         android:angle="90"
-        android:endColor="#b5b6d2"
-        android:startColor="#b5b5d2"
-        android:centerColor="#ecf0f1"
+        android:endColor="#ecf0f1"
+        android:startColor="#ecf0f1"
+        android:centerColor="#95a5a6"
         android:type="linear" />
 
     <corners
